# openclaw-security

./: README.md  pyproject.toml
config/: threat_rules.yaml
openclaw_shield/: access_control.py  advanced_threats.py  asset_manager.py  cli.py  llm_adapter.py  scanner.py  threats.py  updater.py
tests/: test_threat_detection.py
