[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-shield"
version = "1.6.0"
description = "OpenClaw Security Shield - Comprehensive security protection system for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Security Team", email = "security@openclaw.ai"}
]
maintainers = [
    {name = "Wu Luo", email = "wooluo@example.com"}
]
keywords = [
    "security",
    "ai-security",
    "agent-protection",
    "threat-detection",
    "llm-security",
    "prompt-injection",
    "network-monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "colorama>=0.4.6",
    # Security
    "cryptography>=41.0.7",
    "requests>=2.31.0",
    # Code Analysis
    "astroid>=3.0.2",
    "bandit>=1.7.6",
    # Network Monitoring
    "psutil>=5.9.7",
    "netifaces>=0.11.0",
    # Logging & Audit
    "loguru>=0.7.2",
    # Database
    # sqlite3 is built-in
    # Async Support
    "aiohttp>=3.9.1",
    # Configuration Validation
    "pydantic>=2.5.3",
    "jsonschema>=4.20.0",
    # File Monitoring
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]
network = [
    "scapy>=2.5.0",
]
cloud = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "redis>=5.0.1",
]
ai = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.2",
]
all = [
    "openclaw-shield[dev,network,cloud,ai]",
]

[project.urls]
Homepage = "https://github.com/wooluo/openclaw-security"
Documentation = "https://github.com/wooluo/openclaw-security/blob/main/README.md"
Repository = "https://github.com/wooluo/openclaw-security.git"
Issues = "https://github.com/wooluo/openclaw-security/issues"

[project.scripts]
openclaw-shield = "openclaw_shield.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_shield*"]
exclude = ["tests*", "docs*", "config*"]

[tool.setuptools.package-data]
openclaw_shield = ["*.yaml", "*.yml", "*.txt", "rules/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["openclaw_shield"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
